@@ -9,7 +9,6 @@
     <property name="lib" value="${root.dir}/lib/Java"/>
     <property name="web.lib" value="${web-inf.dir}/lib"/>
     <property name="log.dir" value="${basedir}/logs"/>
-    <property name="jvm.args" value="-Xverify:none"/>
     <property name="jvm.mem" value="-Xmx4g"/>
 
 
